fixed collapse in sm

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   text-align: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   .collapse.dont-collapse-sm {
     display: block;
     height: auto !important;
